--- a/HTML5/Test.html
+++ b/HTML5/Test.html
@@ -42,7 +42,7 @@
 
     </div>
     <div id="">
-        <h1 style="text-align:center;">文本格式化标签</h1>
+        <h1 style="text-align:center;">格式化标签</h1>
         <br>
         <h2>加粗：</h2>
         普通字体
@@ -62,7 +62,37 @@
         <ins>推荐的ins标签</ins>
         <hr>
     </div>
-    <div id="">...</div>
+    <div id="">
+        <h1 style="text-align:center;">多媒体标签</h1>
+        <br>
+        <h2>图像标签：</h2>
+        <img src="media/dog.gif" alt="看不到图的时候会替换这个文字" title="鼠标移上去后会显示这个文字">
+        <hr>
+        <h2>链接标签：</h2>
+        <a href="https://www.baidu.com">百度一下，你就知道！</a><br />
+        <a href="#anchor1">锚点1</a><br />
+        <a href="#anchor2">锚点2</a><br />
+        <a href="#anchor3">锚点3</a><br />
+        HH[][][][][]
+        []HH[][][][]
+        [][]HH[][][]
+        [][][]HH[][]
+        [][][][]HH[]
+        [][][][][]HH
+        [][][][]HH[]
+        [][][]HH[][]
+        [][]HH[][][]
+        []HH[][][][]
+        
+        <hr>
+    </div>
+    <div id="">
+            <h1 style="text-align:center;">标签的属性</h1>
+            <br>
+            <h2>表现形式：</h2>
+                <code><标签名 属性名1="属性值1" 属性名2="属性值2"...></code>
+            <hr>
+        </div>
 </body>
 
 </html>
