--- a/02CSS3/xuechengPageDemo/index.html
+++ b/02CSS3/xuechengPageDemo/index.html
@@ -56,6 +56,29 @@
                 </ul>
             </div>
 
+
+            <ul class="circles">
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+            </ul>
+
+
             <div class="classTable">
                 <dt>我的课程表</dt>
                 <dd>
